Bug #106567: The local variable  should be reset to false at each iteration